--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "displayName": "ext-name",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@8.15.4",
   "description": "",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antfu",
   "homepage": "https://github.com/antfu/ext-name#readme",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/antfu/ext-name"
-  },
+  "repository": "antfu/ext-name",
   "bugs": {
     "url": "https://github.com/antfu/ext-name/issues"
   },
@@ -38,27 +35,36 @@
     "build": "tsup src/index.ts --external vscode",
     "dev": "nr build --watch",
     "lint": "eslint .",
-    "vscode:prepublish": "nr build",
-    "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
+    "prepare": "simple-git-hooks",
+    "publish": "vsce publish --no-dependencies",
+    "release": "bumpp && nr publish",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "release": "bumpp && nr publish"
+    "vscode:prepublish": "nr build"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.1.1",
-    "@antfu/ni": "^0.21.9",
-    "@types/node": "^20.9.0",
-    "@types/vscode": "^1.84.1",
-    "@vscode/vsce": "^2.22.0",
-    "bumpp": "^9.2.0",
-    "eslint": "^8.53.0",
-    "esno": "^4.0.0",
-    "pnpm": "^8.10.5",
+    "@antfu/ni": "^0.21.12",
+    "@types/node": "^20.11.28",
+    "@types/vscode": "1.83.0",
+    "@vscode/vsce": "^2.24.0",
+    "bumpp": "^9.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-hyoban": "^0.2.2",
+    "esno": "^4.7.0",
+    "lint-staged": "^15.2.2",
+    "pnpm": "^8.15.4",
     "rimraf": "^5.0.5",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
+    "simple-git-hooks": "^2.10.0",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vitest": "^1.4.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
