--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "publisher": "antfu",
-  "name": "ext-name",
-  "displayName": "ext-name",
+  "publisher": "hyoban",
+  "name": "xlog",
+  "displayName": "xLog",
   "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@8.15.4",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
-  "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/ext-name#readme",
-  "repository": "antfu/ext-name",
-  "bugs": {
-    "url": "https://github.com/antfu/ext-name/issues"
+  "author": {
+    "name": "hyoban",
+    "url": "https://github.com/hyoban"
   },
-  "sponsor": {
-    "url": "https://github.com/sponsors/antfu"
+  "license": "MIT",
+  "homepage": "https://github.com/hyoban/vscode-xlog#readme",
+  "repository": "hyoban/vscode-xlog",
+  "bugs": {
+    "url": "https://github.com/hyoban/vscode-xlog/issues"
   },
   "categories": [
     "Other"
