--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,4 +34,6 @@
     { "rule": "jsonc/indent", "severity": "off" },
     { "rule": "hyoban/no-extra-space-jsx-expression", "severity": "off" },
   ],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
