--- a/package.json
+++ b/package.json
@@ -30,6 +30,44 @@
   "activationEvents": [
     "onStartupFinished"
   ],
+  "contributes": {
+    "configuration": {
+      "title": "xLog",
+      "properties": {
+        "xlog.token": {
+          "type": "string",
+          "description": "Your xLog wise token"
+        },
+        "xlog.handle": {
+          "type": "string",
+          "description": "Your xLog handle"
+        },
+        "xlog.post-folder": {
+          "type": "string",
+          "description": "Your xLog post folder in workspace"
+        }
+      }
+    },
+    "commands": [
+      {
+        "command": "xlog.download",
+        "title": "xLog: Download Post to Workspace"
+      },
+      {
+        "command": "xlog.upload",
+        "title": "xLog: Upload Post"
+      }
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "resourceLangId == markdown",
+          "command": "xlog.upload",
+          "group": "z_commands"
+        }
+      ]
+    }
+  },
   "scripts": {
     "build": "tsup src/index.ts --external vscode",
     "dev": "nr build --watch",
@@ -51,9 +89,11 @@
     "eslint": "^8.57.0",
     "eslint-config-hyoban": "^0.2.2",
     "esno": "^4.7.0",
+    "front-matter": "^4.0.2",
     "lint-staged": "^15.2.2",
     "pnpm": "^8.15.4",
     "rimraf": "^5.0.5",
+    "sakuin": "0.1.0-alpha.8",
     "simple-git-hooks": "^2.10.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
