--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "yaml": "^2.4.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
