--- a/package.json
+++ b/package.json
@@ -64,9 +64,20 @@
       {
         "command": "xlog.uploadFile",
         "title": "xLog: Upload File"
+      },
+      {
+        "command": "xlog.uploadFileFromUrl",
+        "title": "xLog: Upload File from URL"
       }
     ],
     "menus": {
+      "editor/context": [
+        {
+          "when": "resourceLangId == markdown",
+          "command": "xlog.uploadFileFromUrl",
+          "group": "z_commands"
+        }
+      ],
       "explorer/context": [
         {
           "when": "resourceLangId == markdown",
@@ -112,7 +123,7 @@
     "release-it": "^17.1.1",
     "release-it-pnpm": "^4.1.3",
     "rimraf": "^5.0.5",
-    "sakuin": "^0.1.1",
+    "sakuin": "^0.2.1",
     "simple-git-hooks": "^2.11.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
