--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "xLog",
   "version": "0.0.9",
   "private": true,
-  "packageManager": "pnpm@8.15.5",
+  "packageManager": "pnpm@9.15.2",
   "description": "",
   "author": {
     "name": "hyoban",
@@ -12,7 +12,10 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/hyoban/vscode-xlog#readme",
-  "repository": "hyoban/vscode-xlog",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hyoban/vscode-xlog"
+  },
   "bugs": {
     "url": "https://github.com/hyoban/vscode-xlog/issues"
   },
@@ -25,7 +28,7 @@
     "dist"
   ],
   "engines": {
-    "vscode": "^1.83.0"
+    "vscode": "^1.96.0"
   },
   "activationEvents": [
     "onStartupFinished"
@@ -108,24 +111,24 @@
     "vscode:prepublish": "nr build"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.21.12",
-    "@types/node": "^20.11.30",
-    "@types/vscode": "1.83.0",
-    "@vscode/vsce": "^2.24.0",
-    "bumpp": "^9.4.0",
-    "eslint": "^8.57.0",
-    "eslint-config-hyoban": "^0.2.12",
-    "esno": "^4.7.0",
+    "@antfu/ni": "^0.23.2",
+    "@types/node": "^22.10.5",
+    "@types/vscode": "1.96.0",
+    "@vscode/vsce": "^3.2.1",
+    "bumpp": "^9.9.2",
+    "eslint": "^9.17.0",
+    "eslint-config-hyoban": "^3.1.15",
+    "esno": "^4.8.0",
     "front-matter": "^4.0.2",
-    "pnpm": "^8.15.5",
-    "release-it": "^17.1.1",
-    "release-it-pnpm": "^4.1.3",
-    "rimraf": "^5.0.5",
-    "sakuin": "^0.2.6",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.3",
-    "vite": "^5.1.7",
-    "vitest": "^1.4.0",
-    "yaml": "^2.4.1"
+    "pnpm": "^9.15.2",
+    "release-it": "^17.11.0",
+    "release-it-pnpm": "^4.6.3",
+    "rimraf": "^6.0.1",
+    "sakuin": "^0.2.11",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7",
+    "vitest": "^2.1.8",
+    "yaml": "^2.7.0"
   }
 }
